Desarrollo completo de la pagina V1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Zenithium - Desarrollo de Software Innovador | Argentina</title>
+    <meta name="description" content="Zenithium es una empresa líder en desarrollo de software, aplicaciones web y móviles en Argentina. Transformamos ideas en soluciones tecnológicas de vanguardia." />
+    <meta name="author" content="Zenithium Dev Team" />
+    <meta name="keywords" content="desarrollo software, aplicaciones web, desarrollo móvil, Argentina, React, Node.js, cloud computing" />
+
+    <meta property="og:title" content="Zenithium - Desarrollo de Software Innovador" />
+    <meta property="og:description" content="Transformamos ideas innovadoras en soluciones tecnológicas de vanguardia. Especialistas en desarrollo web, móvil y cloud." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://zenithium.dev.ar/og-image.jpg" />
+    <meta property="og:url" content="https://zenithium.dev.ar" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@zenithiumdev" />
+    <meta name="twitter:title" content="Zenithium - Desarrollo de Software Innovador" />
+    <meta name="twitter:description" content="Transformamos ideas innovadoras en soluciones tecnológicas de vanguardia." />
+    <meta name="twitter:image" content="https://zenithium.dev.ar/og-image.jpg" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
