saque typescript y paquetes innecesarios

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <meta property="og:title" content="Zenithium - Desarrollo de Software Innovador" />
     <meta property="og:description" content="Transformamos ideas innovadoras en soluciones tecnológicas de vanguardia. Especialistas en desarrollo web, móvil y cloud." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://zenithium.dev.ar/og-image.jpg" />
-    <meta property="og:url" content="https://zenithium.dev.ar" />
+    <meta property="og:image" content="https://zenithium.com.ar/og-image.jpg" />
+    <meta property="og:url" content="https://zenithium.com.ar" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@zenithiumdev" />
     <meta name="twitter:title" content="Zenithium - Desarrollo de Software Innovador" />
     <meta name="twitter:description" content="Transformamos ideas innovadoras en soluciones tecnológicas de vanguardia." />
-    <meta name="twitter:image" content="https://zenithium.dev.ar/og-image.jpg" />
+    <meta name="twitter:image" content="https://zenithium.com.ar/og-image.jpg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
